@@ -504,3 +504,4 @@
 	- added a summary at the end when "dokuwiki_format" is set
 	- added support for multiple input folders (separated by ';')
 	- updated comparison report to invoke pngcmp and output in HTML
+	- added option "output_folder" for comparison reports
